--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 
                         <div class="col-md-12 text-center wow fadeInUp">
                             <p class="lead wow fadeInUp">
-                            <h4><font color="#000000">23 февраля – День защитника Отечества. Об этом знают все без исключения, однако далеко не все понимают саму суть этого праздника. У нас в обществе сложилось распространенное мнение о том, что 23 февраля – это праздник всех мужчин. С Днем защитника Отечества в нашей стране принято поздравлять взрослых и мальчиков, произносить в их честь торжественные слова и устраивать всевозможные мероприятия. Но если углубится в суть праздника, то мы увидим, что он совсем не про это.<br><br>
-				Важно понимать, что 23 февраля, День защитника Отечества, впервую очередь праздник военных и всех военнобязанных, но про это, к сожалению часто забывают. Стоит еще сказать, что не только те, кто сейчас служит или служил раньше, отмечают это праздник. Существует множество специальностей, которые также являются военнообязанными, а значит это и их праздник тоже. С помощью данного проекта мы хотели бы не только поздравить все причастных к этому дню, но и обротить твое внимание на тот факт, что защитником Отечества является не только тот, кто напрямую связан с армией.<br><br>
-				Наш проект впервую очередь затрагивает врачей, тех, про кого почему-то часто забывают в этот день, хотя они также являются военнообязанными, и некоторые направления обучения, в частности в ИжГТУ имени М.Т. Калашникова, по окончанию которого выпускник получается военный билет и статус военнообязанного.<br><br>
+                            <h4><font color="#000000">23 февраля – День защитника Отечества. Об этом знают все без исключения, однако далеко не все понимают саму суть этого праздника. У нас в обществе сложилось распространенное мнение о том, что 23 февраля – это праздник всех мужчин. С Днем защитника Отечества в нашей стране принято поздравлять взрослых и мальчиков, произносить в их честь торжественные слова и устраивать всевозможные мероприятия. Но если углубится в суть праздника, то мы увидим, что он совсем не про это.<br><br><br>
+				Важно понимать, что 23 февраля, День защитника Отечества, впервую очередь праздник военных и всех военнобязанных, но про это, к сожалению часто забывают. С помощью данного проекта мы хотели бы не только поздравить все причастных к этому дню, но и обротить твое внимание на тот факт, что защитником Отечества является не только тот, кто напрямую связан с армией.<br><br><br>
+				Наш проект впервую очередь затрагивает врачей, тех, про кого почему-то часто забывают в этот день, хотя они также являются военнообязанными, и некоторые специальности, которые также являются военнообязанными.<br><br><br>
 				    Также в нашем проекте ты найдешь несколько классных фотокарточек, посвященных Военному учебному центру ИжГТУ имени М.Т. Калашникова, месту, где обучают будущих защитников Отечества.
 			    </font> </h4>
                             </p>
@@ -190,13 +190,15 @@
 
                         <div class="clearfix"></div>
                         <div class="text-center">
-                                <h4>Дорогие защитники! Примите поздравления с 23 февраля, с самыми искренними и добрыми пожеланиями удачи и уверенности в своих силах. Пусть ваши ожидания хорошего всегда сбываются, а сомнения рассеиваются, пусть ваши мечты не заканчиваются, а становятся все ярче и насыщенней, а все ваши планы претворяются в жизнь.<br>
+                                <h4>Дорогие защитники! Примите наши поздравления с 23 февраля, с самыми искренними и добрыми пожеланиями удачи и уверенности в своих силах. Пусть ваши ожидания хорошего всегда сбываются, а сомнения рассеиваются, пусть ваши мечты не заканчиваются, а становятся все ярче и насыщенней, а все ваши планы претворяются в жизнь.<br><br>
 					С праздником!</h4>
                         </div>
+			<div class="profile_pic text-center">
+			<div class="profile_pic text-center">
                         <div class="clearfix"></div>
                         <div class="text-center">
-                                <h4>Выражаем благодарность всем, кто помогал в реализации проекта.<br>
-				Особено хотим поблагадарить за участие Адамову Ренату, Попову Анну и Белютикова Данила - герой проекта, а также Военный учебный центр ИжГТУ имени М.Т. Калашникова</h4>
+                                <h4>Выражаем благодарность всем, кто помогал в реализации проекта.<br><br>
+				Особено хотим поблагадарить за участие Адамову Ренату, Попову Анну и Белютикова Данила, а также Военный учебный центр ИжГТУ имени М.Т. Калашникова</h4>
                             </div>
 
                     </div>
